Changes to be committed: modified:   _config.butterfly.yml modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: embrology
-subtitle: ''
+title: Life Science
+subtitle: 'Start Here'
 description: ''
 keywords:
 author: Sihan Chen
 language: en
-timezone: ''
+timezone: 'Toronto'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
