Changes to be committed: modified:   _config.butterfly.yml

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -93,8 +93,8 @@ katex:
 favicon: /img/favicon.png
 
 # Avatar (頭像)
-avatar: https://images.shobserver.com/news/690_390/2021/8/16/e6407e43a68149fd87ad486533fd9ee2.jpeg
-  img: 
+avatar: 
+  img: https://images.shobserver.com/news/690_390/2021/8/16/e6407e43a68149fd87ad486533fd9ee2.jpeg
   effect: false
 
 # Disable all banner image
